force-app/main/default/objects/Rooms__c/Rooms__c.object-meta.xml
<CustomObject>
    <label>Rooms</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Rooms No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>