force-app/main/default/objects/Rooms__c/fields/Availability_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Availability_Percentage__c</fullName>
    <formula>( Available_Beds__c / Total_Beds__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Availability Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>