force-app/main/default/objects/Rooms__c/fields/Available_Beds__c.field-meta.xml
<CustomField>
    <fullName>Available_Beds__c</fullName>
    <label>Available Beds</label>
    <summaryFilterItems>
        <field>Bed__c.IsAvailable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Bed__c.Room__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>