force-app/main/default/objects/Rooms__c/fields/Details_of_urgent_actions_needed__c.field-meta.xml
<CustomField>
    <fullName>Details_of_urgent_actions_needed__c</fullName>
    <label>Details of urgent actions needed</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>