force-app/main/default/objects/Rooms__c/fields/House__c.field-meta.xml
<CustomField>
    <fullName>House__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>House ID</label>
    <referenceTo>House__c</referenceTo>
    <relationshipLabel>Rooms</relationshipLabel>
    <relationshipName>Rooms</relationshipName>
    <type>Lookup</type>
</CustomField>