force-app/main/default/objects/Rooms__c/fields/House_Name__c.field-meta.xml
<CustomField>
    <fullName>House_Name__c</fullName>
    <formula>House__r.Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>House Name</label>
    <type>Text</type>
</CustomField>