force-app/main/default/objects/Rooms__c/fields/InitialBedCount__c.field-meta.xml
<CustomField>
    <fullName>InitialBedCount__c</fullName>
    <label>InitialBedCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>