force-app/main/default/objects/Rooms__c/fields/No_Of_Beds__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Beds__c</fullName>
    <label>No Of Beds to be created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>