force-app/main/default/objects/Rooms__c/fields/No_Of_Occupied_Beds__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Occupied_Beds__c</fullName>
    <formula>Total_Beds__c -  Available_Beds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Of Occupied Beds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>