force-app/main/default/objects/Rooms__c/fields/Occupied_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Percentage__c</fullName>
    <formula>( Total_Beds__c - Available_Beds__c ) / Total_Beds__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupied Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>