force-app/main/default/objects/Rooms__c/fields/Out_Of_Order__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox needs to be checked in case the current room is out of order and is not available for allocation.</inlineHelpText>
    <label>Out Of Order</label>
    <type>Checkbox</type>
</CustomField>