force-app/main/default/objects/Rooms__c/fields/Out_Of_Service__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox needs to be checked in case the current room is out of service and is available for allocation.</inlineHelpText>
    <label>Out Of Service</label>
    <type>Checkbox</type>
</CustomField>