force-app/main/default/objects/Rooms__c/fields/Reasons_for_marking_out_of_order__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_marking_out_of_order__c</fullName>
    <label>Reasons for marking out of order</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>