force-app/main/default/objects/Rooms__c/fields/Room_Need_Cleaning__c.field-meta.xml
<CustomField>
    <fullName>Room_Need_Cleaning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox gets checked automatically every day at 12:00 AM for cleaning if the room is allocated.</inlineHelpText>
    <label>Room Needs Cleaning</label>
    <type>Checkbox</type>
</CustomField>