force-app/main/default/objects/Rooms__c/fields/Room_Type__c.field-meta.xml
<CustomField>
    <fullName>Room_Type__c</fullName>
    <label>Room Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Balcony</fullName>
            </value>
            <value>
                <fullName>King Bed</fullName>
            </value>
            <value>
                <fullName>Queen Bed</fullName>
            </value>
            <value>
                <fullName>No Balcony</fullName>
            </value>
            <value>
                <fullName>Sliding Balcony Door</fullName>
            </value>
            <value>
                <fullName>Regular Balcony Door</fullName>
            </value>
            <value>
                <fullName>Close to Elevator</fullName>
            </value>
            <value>
                <fullName>ADA</fullName>
            </value>
            <value>
                <fullName>Door side of Room</fullName>
            </value>
            <value>
                <fullName>Window side of Room</fullName>
            </value>
            <value>
                <fullName>Semi-Private</fullName>
            </value>
            <value>
                <fullName>Lower Level</fullName>
            </value>
            <value>
                <fullName>Off-Set Queens</fullName>
            </value>
            <value>
                <fullName>Walk-Out Balcony</fullName>
            </value>
            <value>
                <fullName>Dormitory</fullName>
                <isActive>false</isActive>
                <label>Dormitory</label>
            </value>
            <value>
                <fullName>Double Occupancy</fullName>
                <isActive>false</isActive>
                <label>Double Occupancy</label>
            </value>
            <value>
                <fullName>Single Occupancy</fullName>
                <isActive>false</isActive>
                <label>Single Occupancy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>