force-app/main/default/objects/Rooms__c/fields/Under_Maintenance_Removed__c.field-meta.xml
<CustomField>
    <fullName>Under_Maintenance_Removed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Under Maintenance/Removed</label>
    <type>Checkbox</type>
</CustomField>