force-app/main/default/objects/Rooms__c/fields/Urgent_Actions__c.field-meta.xml
<CustomField>
    <fullName>Urgent_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox shows that the room needs some urgent actions to be performed immediately.</inlineHelpText>
    <label>Urgent Actions</label>
    <type>Checkbox</type>
</CustomField>