force-app/main/default/objects/Rooms__c/recordTypes/Business_Room.recordType-meta.xml
<RecordType>
    <fullName>Business_Room</fullName>
    <active>true</active>
    <label>Business Room</label>
</RecordType>