force-app/main/default/objects/Rooms__c/recordTypes/TC_Room.recordType-meta.xml
<RecordType>
    <fullName>TC_Room</fullName>
    <active>true</active>
    <label>TC Room</label>
</RecordType>