force-app/main/default/objects/Rooms__c/validationRules/Invalid_Treatment_center.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Treatment_center</fullName>
    <active>false</active>
    <errorConditionFormula>Treatment_Center__c  &lt;&gt;  House__r.Treatment_Center__c</errorConditionFormula>
    <errorDisplayField>Treatment_Center__c</errorDisplayField>
    <errorMessage>Please Choose Valid Treatment Center</errorMessage>
</ValidationRule>