force-app/main/default/objects/Rooms__c/validationRules/Non_Editable_after_the_first_time.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Editable_after_the_first_time</fullName>
    <active>true</active>
    <errorConditionFormula>IF(PRIORVALUE(  No_Of_Beds__c ) = null, false, 

IF(PRIORVALUE( No_Of_Beds__c ) != No_Of_Beds__c , true, false))</errorConditionFormula>
    <errorDisplayField>No_Of_Beds__c</errorDisplayField>
    <errorMessage>The value for this field can only be specified once. If you want to add or remove beds please do it manually from the related list.</errorMessage>
</ValidationRule>