force-app/main/default/objects/Rooms__c/validationRules/Number_of_Beds.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_Beds</fullName>
    <active>true</active>
    <description>Limiting number of beds to 50</description>
    <errorConditionFormula>OR(No_Of_Beds__c&gt; 50,No_Of_Beds__c&lt; 0)</errorConditionFormula>
    <errorDisplayField>No_Of_Beds__c</errorDisplayField>
    <errorMessage>Number of beds must be greater than zero and less than or equal to 50</errorMessage>
</ValidationRule>