force-app/main/default/objects/Rooms__c/validationRules/Room_should_have_at_least_1_bed.validationRule-meta.xml
<ValidationRule>
    <fullName>Room_should_have_at_least_1_bed</fullName>
    <active>true</active>
    <description>Room should have at least 1 bed</description>
    <errorConditionFormula>AND( PRIORVALUE( Total_Beds__c )&gt; Total_Beds__c , 
Total_Beds__c  &lt; 1)</errorConditionFormula>
    <errorMessage>A room should have at least one bed</errorMessage>
</ValidationRule>