force-app/main/default/objects/Rooms__c/listViews/All_Rooms.listView-meta.xml
<ListView>
    <fullName>All_Rooms</fullName>
    <columns>Formula_Name__c</columns>
    <columns>NAME</columns>
    <columns>Total_Beds__c</columns>
    <columns>Treatment_Center_Name__c</columns>
    <columns>House_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Rooms</label>
</ListView>