force-app/main/default/objects/Rooms__c/listViews/Treatment_Center_Rooms.listView-meta.xml
<ListView>
    <fullName>Treatment_Center_Rooms</fullName>
    <columns>Formula_Name__c</columns>
    <columns>NAME</columns>
    <columns>Total_Beds__c</columns>
    <columns>Treatment_Center_Name__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Rooms__c.TC_Room</value>
    </filters>
    <label>Treatment Center Rooms</label>
</ListView>